// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can create a future release 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

**Merged pull requests:**

- Pull request 2 [#2](https://github.com/owner/repo/pull/2) ([user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

**Merged pull requests:**

- Pull request 1 [#1](https://github.com/owner/repo/pull/1) ([user](https://github.com/user))
"
`;

exports[`can infer repo info 1`] = `
"# Changelog

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

**Merged pull requests:**

- Pull request 1 [#1](https://github.com/owner/repo/pull/1) ([user](https://github.com/user))
"
`;

exports[`handles GitHub API pagination 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

**Merged pull requests:**

- Pull request 2 [#2](https://github.com/owner/repo/pull/2) ([user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

**Merged pull requests:**

- Pull request 1 [#1](https://github.com/owner/repo/pull/1) ([user](https://github.com/user))
"
`;

exports[`handles multiple PRs per tag 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

**Merged pull requests:**

- Pull request 4 [#4](https://github.com/owner/repo/pull/4) ([user](https://github.com/user))
- Pull request 3 [#3](https://github.com/owner/repo/pull/3) ([user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

**Merged pull requests:**

- Pull request 2 [#2](https://github.com/owner/repo/pull/2) ([user](https://github.com/user))
- Pull request 1 [#1](https://github.com/owner/repo/pull/1) ([user](https://github.com/user))
"
`;

exports[`only uses merged PRs 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-01-31)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

**Merged pull requests:**

- Pull request 2 [#2](https://github.com/owner/repo/pull/2) ([user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-30)

**Merged pull requests:**

- Pull request 1 [#1](https://github.com/owner/repo/pull/1) ([user](https://github.com/user))
"
`;

exports[`refetches missing tag commits 1`] = `
"# Changelog

## [v2.0.0](https://github.com/owner/repo/tree/v2.0.0) (2000-02-01)
[Full Changelog](https://github.com/owner/repo/compare/v1.0.0...v2.0.0)

**Merged pull requests:**

- Pull request 1 [#1](https://github.com/owner/repo/pull/1) ([user](https://github.com/user))

## [v1.0.0](https://github.com/owner/repo/tree/v1.0.0) (2000-01-31)

**Merged pull requests:**

- Pull request 2 [#2](https://github.com/owner/repo/pull/2) ([user](https://github.com/user))
"
`;
